--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^6.0.3",
     "@ng-select/ng-select": "^2.3.1",
     "@types/lodash": "^4.14.110",
+    "angular-webstorage-service": "^1.0.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.10",
