--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mobx": "^5.0.3",
     "mobx-angular": "^3.0.1",
     "moment": "^2.22.2",
+    "ng2-file-upload": "^1.3.0",
     "ngx-treeview": "latest",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
