--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod && cp src/assets/manifest.webapp dist/baylor/ && cd dist/baylor/ && zip -r -D ../baylor.zip .",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
